clean up music page, move around txt on about page , fix mobile break , align tour page

--- a/src/components/NavMenu.css
+++ b/src/components/NavMenu.css
@@ -282,6 +282,10 @@
   }
 
   .nav-menu--home .nav-links {
+    display: block;
+  }
+
+  .nav-menu--home .hamburger {
     display: none;
   }
 }
